docs(context): adiciona nota explicativa e descrição do parceiro fictício em "01-Doc(...)Contexto.md"
- Reestruturação de "📁 Estrutura" em root folder "README.md"

--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,6 @@ $tf/
 **/[Cc]odigo-fonte/[Ee]asy [Cc]lean [Mm]ate [Ww]in[Uu][Ii]/[Ee]asy [Cc]lean [Mm]ate [Ww]in[Uu][Ii].csproj.user
 **/[Cc]odigo-fonte/[Ee]asy [Cc]lean [Mm]ate [Ww]in[Uu][Ii]/[Pp]roperties/[Pp]ublish[Pp]rofiles/
 **/[Cc]odigo-fonte/[Ee]asy [Cc]lean [Mm]ate [Ww]in[Uu][Ii]/[Pp]roperties/launchSettings.json
+
+# Visual Studio Community
+.vs/
